@@ -10,12 +10,12 @@
 
 #include <zeep/config.hpp>
 
-#include <set>
-
-#include <zeep/exception.hpp>
 #include <zeep/crypto.hpp>
+#include <zeep/exception.hpp>
 #include <zeep/http/server.hpp>
 #include <zeep/json/element.hpp>
+
+#include <set>
 
 // --------------------------------------------------------------------
 //
@@ -30,7 +30,10 @@ namespace zeep::http
 struct unauthorized_exception : public zeep::exception
 {
 	/// \brief constructor
-	unauthorized_exception() : exception("unauthorized") { }
+	unauthorized_exception()
+		: exception("unauthorized")
+	{
+	}
 };
 
 // --------------------------------------------------------------------
@@ -40,8 +43,8 @@ class password_encoder
   public:
 	virtual ~password_encoder() {}
 
-	virtual std::string encode(const std::string& password) const = 0;
-	virtual bool matches(const std::string& raw_password, const std::string& stored_password) const = 0;
+	virtual std::string encode(const std::string &password) const = 0;
+	virtual bool matches(const std::string &raw_password, const std::string &stored_password) const = 0;
 };
 
 // --------------------------------------------------------------------
@@ -49,12 +52,15 @@ class password_encoder
 class pbkdf2_sha256_password_encoder : public password_encoder
 {
   public:
-	static inline constexpr const char* name() { return "pbkdf2_sha256"; };
+	static inline constexpr const char *name() { return "pbkdf2_sha256"; };
 
 	pbkdf2_sha256_password_encoder(int iterations = 30000, int key_length = 32)
-		: m_iterations(iterations), m_key_length(key_length) {}
+		: m_iterations(iterations)
+		, m_key_length(key_length)
+	{
+	}
 
-	virtual std::string encode(const std::string& password) const
+	virtual std::string encode(const std::string &password) const
 	{
 		using namespace std::literals;
 
@@ -63,7 +69,7 @@ class pbkdf2_sha256_password_encoder : public password_encoder
 		return "pbkdf2_sha256$" + std::to_string(m_iterations) + '$' + salt + '$' + pw;
 	}
 
-	virtual bool matches(const std::string& raw_password, const std::string& stored_password) const
+	virtual bool matches(const std::string &raw_password, const std::string &stored_password) const
 	{
 		using namespace std::literals;
 
@@ -100,8 +106,12 @@ class pbkdf2_sha256_password_encoder : public password_encoder
 struct user_details
 {
 	user_details() {}
-	user_details(const std::string& username, const std::string& password, const std::set<std::string>& roles)
-		: username(username), password(password), roles(roles) {}
+	user_details(const std::string &username, const std::string &password, const std::set<std::string> &roles)
+		: username(username)
+		, password(password)
+		, roles(roles)
+	{
+	}
 
 	std::string username;
 	std::string password;
@@ -114,14 +124,16 @@ struct user_details
 class user_unknown_exception : public zeep::exception
 {
   public:
-	user_unknown_exception() : zeep::exception("user unknown") {};
+	user_unknown_exception()
+		: zeep::exception("user unknown"){};
 };
 
 /// \brief exception thrown by security_context when a username/password combo is not valid
 class invalid_password_exception : public zeep::exception
 {
   public:
-	invalid_password_exception() : zeep::exception("invalid password") {};
+	invalid_password_exception()
+		: zeep::exception("invalid password"){};
 };
 
 // --------------------------------------------------------------------
@@ -137,10 +149,13 @@ class user_service
 	virtual ~user_service() {}
 
 	/// \brief return the user_details for a user named \a username
-	virtual user_details load_user(const std::string& username) const = 0;
+	virtual user_details load_user(const std::string &username) const = 0;
+
+	/// \brief return true if the credentials in \a credentials are still sufficient to access this web application
+	virtual bool user_is_valid(const json::element &credentials) const;
 
 	/// \brief return true if a user named \a username is allowed to access this web application
-	virtual bool user_is_valid(const std::string& username) const;
+	virtual bool user_is_valid(const std::string &username) const;
 };
 
 // --------------------------------------------------------------------
@@ -153,23 +168,24 @@ class user_service
 class simple_user_service : public user_service
 {
   public:
-	simple_user_service(std::initializer_list<std::tuple<std::string,std::string,std::set<std::string>>> users)
+	simple_user_service(std::initializer_list<std::tuple<std::string, std::string, std::set<std::string>>> users)
 	{
-		for (auto const& [username, password, roles]: users)
+		for (auto const &[username, password, roles] : users)
 			add_user(username, password, roles);
 	}
 
 	/// \brief return the user_details for a user named \a username
-	virtual user_details load_user(const std::string& username) const
+	virtual user_details load_user(const std::string &username) const
 	{
 		user_details result = {};
-		auto ui = std::find_if(m_users.begin(), m_users.end(), [username](const user_details& u) { return u.username == username; });
+		auto ui = std::find_if(m_users.begin(), m_users.end(), [username](const user_details &u)
+			{ return u.username == username; });
 		if (ui != m_users.end())
 			result = *ui;
 		return result;
 	}
 
-	void add_user(const std::string& username, const std::string& password, const std::set<std::string>& roles)
+	void add_user(const std::string &username, const std::string &password, const std::set<std::string> &roles)
 	{
 		m_users.emplace_back(username, password, roles);
 	}
@@ -195,8 +211,10 @@ class security_context
 	///
 	/// Create a security context for server \a s with validator \a validator and
 	/// a flag \a defaultAccessAllowed indicating if non-matched uri's should be allowed
-	security_context(const std::string& secret, user_service& users, bool defaultAccessAllowed = false)
-		: m_secret(secret), m_users(users), m_default_allow(defaultAccessAllowed)
+	security_context(const std::string &secret, user_service &users, bool defaultAccessAllowed = false)
+		: m_secret(secret)
+		, m_users(users)
+		, m_default_allow(defaultAccessAllowed)
 	{
 		register_password_encoder<pbkdf2_sha256_password_encoder>();
 	}
@@ -205,7 +223,7 @@ class security_context
 	///
 	/// The password encoder should derive from the abstract password encoder class above
 	/// and also implement the name() method.
-	template<typename PWEncoder>
+	template <typename PWEncoder>
 	void register_password_encoder()
 	{
 		m_known_password_encoders.emplace_back(PWEncoder::name(), new PWEncoder());
@@ -216,8 +234,8 @@ class security_context
 	/// A new rule will be added to the list, allowing access to \a glob_pattern
 	/// to users having role \a role
 	///
- 	/// \a glob_pattern should start with a slash
-	void add_rule(const std::string& glob_pattern, const std::string& role)
+	/// \a glob_pattern should start with a slash
+	void add_rule(const std::string &glob_pattern, const std::string &role)
 	{
 		add_rule(glob_pattern, { role });
 	}
@@ -233,7 +251,7 @@ class security_context
 	void add_rule(std::string glob_pattern, std::initializer_list<std::string> roles)
 	{
 		assert(glob_pattern.front() == '/');
-		m_rules.emplace_back(rule{glob_pattern, roles});
+		m_rules.emplace_back(rule{ glob_pattern, roles });
 	}
 
 	/// \brief Validate the request \a req against the stored rules
@@ -242,16 +260,7 @@ class security_context
 	/// and will throw an exception if access is not allowed.
 	/// The request \a req will be updated with the credentials for further use.
 	/// If the validate CSRF is set, the CSRF token will also be validated.
-	void validate_request(request& req) const;
-
-	/// \brief Add e.g. headers to reply for an authorized request
-	///
-	/// When validation succeeds, a HTTP reply is send to the user and this routine will be
-	/// called to augment the reply with additional information.
-	///
-	/// \param rep			Then zeep::http::reply object that will be send to the user
-	/// \param username		The name for the authorized user, credentials will be fetched from the user_service
-	void add_authorization_headers(reply &rep, const std::string& username);
+	void validate_request(request &req) const;
 
 	/// \brief Add e.g. headers to reply for an authorized request
 	///
@@ -262,6 +271,17 @@ class security_context
 	/// \param user			The authorized user details
 	void add_authorization_headers(reply &rep, const user_details user);
 
+	/// \brief Add e.g. headers to reply for an authorized request, with an expiration parameter
+	///
+	/// When validation succeeds, a HTTP reply is send to the user and this routine will be
+	/// called to augment the reply with additional information.
+	///
+	/// \param rep			Then zeep::http::reply object that will be send to the user
+	/// \param user			The authorized user details
+	/// \param exp			The maximum lifetime for the access token
+	void add_authorization_headers(reply &rep, const user_details user,
+		std::chrono::system_clock::duration exp);
+
 	/// \brief verify the username/password combination and set a cookie in the reply in case of success
 	///
 	/// When validation succeeds, add_authorization_headers is called, otherwise an exception is thrown.
@@ -269,46 +289,45 @@ class security_context
 	/// \param username		The name for the user
 	/// \param password		The password for the user
 	/// \param rep			Then zeep::http::reply object that will be send back to the browser
-	void verify_username_password(const std::string& username, const std::string& password, reply &rep);
+	void verify_username_password(const std::string &username, const std::string &password, reply &rep);
 
 	/// \brief verify the username/password combination and return true if valid
 	///
 	/// \param username		The name for the user
 	/// \param password		The password for the user
 	/// \result             True in case of valid combination
-	bool verify_username_password(const std::string& username, const std::string& password);
+	bool verify_username_password(const std::string &username, const std::string &password);
 
 	/// \brief return reference to the user_service object
-	user_service& get_user_service() const			{ return m_users; }
+	user_service &get_user_service() const { return m_users; }
 
 	/// \brief Get or create a CSRF token for the current request
 	///
 	/// Return a CSRF token. If this was not present in the request, a new will be generated
 	/// \param req		The HTTP request
 	/// \return			A std::pair containing the CSRF token and a flag indicating the token is new
-	std::pair<std::string,bool> get_csrf_token(request& req);
+	std::pair<std::string, bool> get_csrf_token(request &req);
 
 	/// \brief To automatically validate CSRF tokens, set this flag
-	void set_validate_csrf(bool validate)			{ m_validate_csrf = validate; }
-	bool get_validate_csrf() const					{ return m_validate_csrf; }
+	void set_validate_csrf(bool validate) { m_validate_csrf = validate; }
+	bool get_validate_csrf() const { return m_validate_csrf; }
 
   private:
-	security_context(const security_context&) = delete;
-	security_context& operator=(const security_context&) = delete;
+	security_context(const security_context &) = delete;
+	security_context &operator=(const security_context &) = delete;
 
 	struct rule
 	{
-		std::string				m_pattern;
-		std::set<std::string>	m_roles;
+		std::string m_pattern;
+		std::set<std::string> m_roles;
 	};
 
 	std::string m_secret;
-	user_service& m_users;
+	user_service &m_users;
 	bool m_default_allow;
 	bool m_validate_csrf = false;
 	std::vector<rule> m_rules;
-	std::vector<std::tuple<std::string,std::unique_ptr<password_encoder>>> m_known_password_encoders;
+	std::vector<std::tuple<std::string, std::unique_ptr<password_encoder>>> m_known_password_encoders;
 };
-
 
 } // namespace zeep::http
