@@ -4,14 +4,14 @@
 //      (See accompanying file LICENSE_1_0.txt or copy at
 //            http://www.boost.org/LICENSE_1_0.txt)
 
-#include <iostream>
+#include "glob.hpp"
 
 #include <zeep/crypto.hpp>
 #include <zeep/http/security.hpp>
 #include <zeep/http/uri.hpp>
 #include <zeep/json/parser.hpp>
 
-#include "glob.hpp"
+#include <iostream>
 
 namespace zeep::http
 {
@@ -24,7 +24,12 @@ namespace
 
 // --------------------------------------------------------------------
 
-bool user_service::user_is_valid(const std::string& username) const
+bool user_service::user_is_valid(const json::element &credentials) const
+{
+	return user_is_valid(credentials["username"].as<std::string>());
+}
+
+bool user_service::user_is_valid(const std::string &username) const
 {
 	bool result = false;
 
@@ -37,7 +42,7 @@ bool user_service::user_is_valid(const std::string& username) const
 	{
 	}
 
-	return result;	
+	return result;
 }
 
 // --------------------------------------------------------------------
@@ -81,11 +86,20 @@ void security_context::validate_request(request &req) const
 			json::element credentials;
 			json::parse_json(decode_base64url(m[2].str()), credentials);
 
+			// check exp
+			using namespace std::chrono;
+
+			auto exp = credentials["exp"].as<int64_t>();
+			auto exp_t = time_point<system_clock>() + seconds{exp};
+			
+			if (system_clock::now() > exp_t)
+				break; // expired
+
 			if (not credentials.is_object() or not credentials["role"].is_array())
 				break;
-			
+
 			// make sure user still exists.
-			if (not m_users.user_is_valid(credentials["username"].as<std::string>()))
+			if (not m_users.user_is_valid(credentials))
 				break;
 
 			for (auto role : credentials["role"])
@@ -137,17 +151,24 @@ void security_context::validate_request(request &req) const
 
 // --------------------------------------------------------------------
 
-void security_context::add_authorization_headers(reply &rep, const user_details user)
+void security_context::add_authorization_headers(reply &rep, const user_details user,
+	std::chrono::system_clock::duration exp)
 {
 	using namespace json::literals;
+
+	using namespace date;
+	using namespace std::chrono;
 
 	auto JOSEHeader = R"({
 		"typ": "JWT",
 		"alg": "HS256"
 	})"_json;
 
+	auto exp_t = duration_cast<seconds>(system_clock::now() + exp - system_clock::time_point()).count();
+
 	json::element credentials{
-		{ "username", user.username }
+		{ "username", user.username },
+		{ "exp", exp_t }
 	};
 
 	for (auto &role : user.roles)
@@ -157,10 +178,15 @@ void security_context::add_authorization_headers(reply &rep, const user_details 
 	auto h2 = encode_base64url(credentials.as<std::string>());
 	auto h3 = encode_base64url(hmac_sha256(h1 + '.' + h2, m_secret));
 
-	rep.set_cookie("access_token", h1 + '.' + h2 + '.' + h3, {
-		{ "HttpOnly", "" },
-		{ "SameSite", "Lax" }
-	});
+	rep.set_cookie("access_token", h1 + '.' + h2 + '.' + h3, { { "HttpOnly", "" }, { "SameSite", "Lax" } });
+}
+
+void security_context::add_authorization_headers(reply &rep, const user_details user)
+{
+	using namespace date;
+	using namespace std::chrono;
+
+	add_authorization_headers(rep, user, std::chrono::years{1});
 }
 
 // --------------------------------------------------------------------
