@@ -60,3 +60,43 @@ BOOST_AUTO_TEST_CASE(sec_1)
 */
 }
 
+BOOST_AUTO_TEST_CASE(sec_2)
+{
+	zh::simple_user_service users({
+		{ "scott", "tiger", { "USER" } }
+	});
+
+	zeep::http::security_context sc("1234", users, false);
+	sc.add_rule("/**", { "USER" });
+
+	auto user = users.load_user("scott");
+
+	{
+		// default expires one year from now
+
+		zh::reply rep;
+		sc.add_authorization_headers(rep, user);
+
+		zh::request req{ "GET", "/" };
+		req.set_cookie("access_token", rep.get_cookie("access_token"));
+
+		BOOST_CHECK_NO_THROW(sc.validate_request(req));
+	}
+
+
+	{
+		// check with 1 second
+
+		zh::reply rep;
+		sc.add_authorization_headers(rep, user, std::chrono::seconds{1});
+
+		zh::request req{ "GET", "/" };
+		req.set_cookie("access_token", rep.get_cookie("access_token"));
+
+		std::this_thread::sleep_for(std::chrono::seconds{2});
+
+		BOOST_CHECK_THROW(sc.validate_request(req), zeep::exception);
+	}
+
+}
+
